--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
    "scripts": {
       "build": "nest build",
       "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-      "start": "ts-node src/index.ts",
+      "start": "nest start",
       "start:dev": "nest start --watch",
       "start:debug": "nest start --debug --watch",
       "start:prod": "node dist/main",
@@ -25,6 +25,7 @@
       "@nestjs/core": "^9.0.0",
       "@nestjs/platform-express": "^9.0.0",
       "@nestjs/typeorm": "^9.0.1",
+      "jsonwebtoken": "^9.0.0",
       "reflect-metadata": "^0.1.13",
       "rxjs": "^7.2.0",
       "sqlite3": "^5.1.6",
